UserManager에서 데이터베이스를 받습니다.